# ClayUtilities

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
clayutil/: cmdparse.py  futil.py  sutil.py
examples/: ackx.py  fcitx5_dict_updater.py  gen_rsa_key.py  lottery.py  lottery_example.properties  srt_prettifier.py
scripts/: daxuexi_end.py  fcitx5_dict_updater.py  lottery.py
src/clayutil/: cmdparse.py  futil.py  sutil.py  tutil.py  validator.py
tests/: test_check_duplicate_filename.py  test_cmdparse.py  test_downloader.py  test_filelock.py  test_folder_monitor.py  test_lock.py  test_validator.py  test_zh_prettifier.py
