[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clayutil"
version = "0.1"
dependencies = [
    "chardet",
    "patool",
    "requests",
    "textract",
    "orjson",
    "jsonschema",
    "pytest",
]
authors = [
    { name = "bobbycyl", email = "bobbycyl@126.com" },
]
description = "A simple toolset for python"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bobbycyl/ClayUtilities.git"
Issues = "https://github.com/bobbycyl/ClayUtilities/issues"
