[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clayutil"
version = "0.1"
dependencies = [
    "aiohttp",
    "filelock",
    "requests",
    "pycryptodome",
    "orjson",
    "jsonschema",
    "pytest",
]
requires-python = ">=3.12"
authors = [
    { name = "bobbycyl", email = "bobbycyl@126.com" },
]
description = "A simple toolset for python"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/bobbycyl/ClayUtilities.git"
"Bug Tracker" = "https://github.com/bobbycyl/ClayUtilities/issues"
